--- a/TestCodeHTML.html
+++ b/TestCodeHTML.html
@@ -1,5 +1,24 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-<h1>Hey I'am a big Heading</h1>
-<p> I'am a Paragraph </p>
-<a href="https://google.com" target="_blank" title="Let's Go to HERE!"> Click me! </a>
+<!DOCTYPE html>
+<html>
+<head> 
+
+<title>
+    Test Page
+</title>
+
+</head>
+
+<body>
+
+
+    <h1>Hey I'am a big Heading</h1>
+    <p> I'am a <b>Paragraph<b> </p>
+    <a href="https://google.com" target="_blank" title="Let's Go to HERE!"> Click me! </a>
+    <p>My name is: <br>
+    Kitty Cat
+    </p>
+    <img src="img/cat.jpg"> 
+</body>
+</html>
