Added another name

--- a/TestCodeHTML.html
+++ b/TestCodeHTML.html
@@ -17,7 +17,7 @@
     <p> I'am a <b>Paragraph<b> </p>
     <a href="https://google.com" target="_blank" title="Let's Go to HERE!"> Click me! </a>
     <p>My name is: <br>
-    Kitty Cat
+    Kitty Cat the Queen
     </p>
     <img src="img/cat.jpg"> 
 </body>
