--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <link rel="icon" href="img/hiccup-avatar.jpg">
     <title>Hiccup</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 
@@ -19,7 +23,7 @@
             He lives in the viking age an his best friend is Astrid. 
             His Dragons name is TOOTHLESS.</p>
         <img src="img/hiccup-and-astrid.jpg">
-        <p>Hiccup and his Friends</p>
+        <p class="caption">Hiccup and his Friends</p>
 
         <!-- Characteristics -->
         <h2>Hiccup's Characteristics</h2>
