Added finishing Touches

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <h2>About Hiccup</h2>
         <p> Hiccups is a fierce dragon Rider! 
-            He lives in the viking age an his best friend is Astrid. 
+            He lives in the viking age and his best friend is Astrid. 
             His Dragons name is TOOTHLESS.</p>
         <img src="img/hiccup-and-astrid.jpg">
         <p class="caption">Hiccup and his Friends</p>
@@ -30,14 +30,14 @@
         <ol>
 
             <li>He is Kind</li>
-            <li>He is Fierece</li>
-            <li>He is Cool</li>
+            <li>He is Tall</li>
+            <li>He is Brave</li>
 
         </ol>
 
         <!-- Friends -->
         <h2>Hiccup's Friends</h2>
-        <p>Hiccup is loveable and has many Friends, his best frined is Astrid.
+        <p>Hiccup is loveable and has many Friends, his best friend is Astrid.
         Click on the links below to read more about them.</p>
         <ul>
 
@@ -48,6 +48,8 @@
 
         </ul>
 
+        <h3>Thank you for reading my Website!</h2>
+
 
 
     </main>
@@ -56,7 +58,7 @@
     <footer>
 
         <p>This site was created during a <a target="_blank" href="https://taptapkaboom.com">Tap Tap Kaboom</a> class. 
-            &copy; Eddie G
+            &copy; Eddie Gustafsson
         </p>
 
     </footer>
